--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "recharts": "^2.1.15",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
